# Adaptive-drumming-vst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE_2D_FOLLOW.md  FABLE_HANDOFF.md  FABLE_PROMPT.md  FABLE_REVIEW.md  ROADMAP.md  ROADMAP_2D.md  TODO.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/drummer/: AdaptiveDrummer.cpp  AdaptiveDrummer.h  DrumPattern.cpp  DrumPattern.h  DrumSampler.cpp  DrumSampler.h  DrumStepClock.h  DrumSynth.cpp  DrumSynth.h  EnergyAnalyzer.cpp  EnergyAnalyzer.h  GrooveHash.h
tests/: AdaptiveDrummerProcessorTest.cpp  AdaptiveDrummerTest.cpp  DrumPatternTest.cpp  DrumSamplerTest.cpp  DrumStepClockTest.cpp  DrumSynthTest.cpp  EnergyAnalyzerTest.cpp  TestRunner.cpp
